...
                Flexible(
                  child: SizedBox(
                    height: 100.0,
                  ),
                ),
                TextField(
                  key: Key('textFieldEmail'),
                  keyboardType: TextInputType.emailAddress,
                  textAlign: TextAlign.center,
                  onChanged: (value) {
                    userEmail = value;
                  },
                  decoration: kTextDecoration.copyWith(
...
                  ),
                ),
                SizedBox(
                  height: 8.0,
                ),
                TextField(
                  key: Key('textFieldPassword'),
                  textAlign: TextAlign.center,
                  obscureText: true,
                  onChanged: (value) {
                    userPassword = value;
                  },
                  decoration: kTextDecoration.copyWith(
...
