...

    showModalBottomSheet(
      context: context,
      builder: (context) {
        //return Provider.value(value: myModel, child: BottomSheetCreate());
        if (type == PostType.NormalPost) {
          return ListView(key: Key('bottomSheetList'), children: [
            Container(
              margin: EdgeInsets.all(20.0),
              child: Column(
                mainAxisAlignment: MainAxisAlignment.start,
                crossAxisAlignment: CrossAxisAlignment.start,
                children: [
...
                  SizedBox(height: 10.0),
                  Row(
                    mainAxisAlignment: MainAxisAlignment.spaceEvenly,
                    children: [
                      Expanded(
                        child: TextButton(
                            key: Key('deliveredTextButton'),
                            onPressed: () async {
                              setState(() {
                                showSpinner = true;
                              });
                              Navigator.of(context).pop();
                              DatabaseResult result =
...
                            child: Text('Delivered',
                                style: TextStyle(color: Colors.green))),
                      ),
                      SizedBox(width: 20.0),
                      Expanded(
                        child: TextButton(
                          key: Key('failedTextButton'),
                          onPressed: () async {
                            setState(() {
                              showSpinner = true;
                            });
                            Navigator.of(context).pop();
                            DatabaseResult result =
...
                              //postdata.removepackagePost(postItem);
                              signature = await Navigator.pushNamed(
                                  context, SignatureScreen.screenId);
                            }
                            if (signature != null ||
                                postType == PostType.NormalPost) {
                              acceptButton(signature, postType, postItem);
                            }
                          },
                          value: false,
                        ),
                      ),
                      Divider(),
...
